--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <button class="btn" type="submit">Enter</button>
       </form>
       <p id="result"></p>
+      <form class="form-group" id="form2">
+        <label for="userAnswer">Solve the puzzle:</label>
+        <input id="userAnswer" class="form-control" type="text">
+        <button class="btn" type="submit">Enter</button>
+      </form>
+      <p id="output"></p>
     </div>
   </body>
 </html>
